--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^6.1.95",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "vee-validate": "^3.4.12",
     "vue": "^2.6.11",
     "vue-axios": "^3.3.4",
     "vue-router": "^3.2.0",
@@ -28,7 +30,6 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
-    "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
